argocd/applications/registry/tailscale-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-tailscale
  namespace: registry
  annotations:
    tailscale.com/hostname: registry
    tailscale.com/tags: '["tag:k8s"]'
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: registry
  ports:
    - name: https
      port: 443
      targetPort: 5000
      protocol: TCP
